--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "@expo/vector-icons": "^14.0.2",
         "@gorhom/bottom-sheet": "^4.6.4",
         "@react-navigation/native": "^6.0.2",
-        "expo": "~51.0.28",
+        "expo": "~51.0.36",
         "expo-constants": "~16.0.2",
         "expo-font": "~12.0.9",
         "expo-linking": "~6.3.1",
@@ -31,12 +31,14 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-native": "0.74.5",
+        "react-native-appwrite": "^0.5.0",
         "react-native-gesture-handler": "~2.16.1",
         "react-native-pager-view": "6.3.0",
         "react-native-reanimated": "~3.10.1",
         "react-native-safe-area-context": "4.10.5",
         "react-native-screens": "3.31.1",
         "react-native-tab-view": "^3.5.2",
+        "react-native-url-polyfill": "^2.0.0",
         "react-native-web": "~0.19.10",
         "zustand": "^5.0.0-rc.2"
     },
@@ -47,6 +49,7 @@
         "@types/react-test-renderer": "^18.0.7",
         "jest": "^29.2.1",
         "jest-expo": "~51.0.3",
+        "react-native-dotenv": "^3.4.11",
         "react-test-renderer": "18.2.0",
         "tailwindcss": "^3.3.2",
         "typescript": "~5.3.3"
