--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ APPWRITE_PLATFORM=
 APPWRITE_DATABASE_ID=
 APPWRITE_USER_COLLECTION_ID=
 APPWRITE_FILE_STORAGE_ID=
+APPWRITE_TRANSLATION_TEAM_COLLECTION_ID=
