--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-appwrite": "^0.5.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-indicators": "^0.17.0",
     "react-native-pager-view": "6.3.0",
