--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ APPWRITE_DATABASE_ID=
 APPWRITE_USER_COLLECTION_ID=
 APPWRITE_FILE_STORAGE_ID=
 APPWRITE_TRANSLATION_TEAM_COLLECTION_ID=
+APPWRITE_COMIC_CATEGORY_COLLECTION_ID=
