feat(UI/func): update comic management UI and handle function

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ APPWRITE_USER_COLLECTION_ID=
 APPWRITE_FILE_STORAGE_ID=
 APPWRITE_TRANSLATION_TEAM_COLLECTION_ID=
 APPWRITE_COMIC_CATEGORY_COLLECTION_ID=
+APPWRITE_COMIC_COLLECTION_ID=
+APPWRITE_COMIC_CHAPTER_COLLECTION_ID=
+APPWRITE_COMIC_CHAPTER_CONTENT_COLLECTION_ID=
+APPWRITE_COMIC_CHAPTER_CONTENT_IMAGE_COLLECTION_ID=
